# scannergap

./: .gitignore  BENCHMARK_EVIDENCE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROJECT_CANON.md  PROJECT_CONTEXT_AUDIT.md  QUALITY_GATE.md  README.md  RELEASE_CHECKLIST.md  benchmark_manifest.json  conftest.py  kill_criteria.md  pyproject.toml
.claude/: settings.local.json
.claude/memory/: activeContext.md  decisions.md
.github/workflows/: ci.yml
config/: scanners.json
corpus/: gold_subset.json  pilot_corpus.json
demo/: ciso-demo.md  data-handling.md  demo-script.md  discovery-call-script.md  first-10-outreach-plan.md  intake-questionnaire.md  mfo-discovery-checklist.md  mfo-pilot-plan.md  one-pager.md  outreach-email.md  outreach-tracker.md  poc-offer.md  public-repo-sample-report.md  sample-report.md  slides.md
docs/: findings.html  findings.md  index.html  methodology.md  reproducibility.md  roadmap.md  scoring_rubric.md
results/: benchmark_report_20260413.md  codeql-CVE-2024-45390.sarif  codeql_batch.json  codeql_gate.json  gold_evaluation.json
results/codeql/: CVE-2023-3224.sarif  CVE-2023-32766.sarif  CVE-2023-33965.sarif  CVE-2023-35844.sarif  CVE-2023-35926.sarif  CVE-2023-37466.sarif  CVE-2023-37918.sarif  CVE-2023-38691.sarif  CVE-2023-46119.sarif  CVE-2024-29029.sarif  CVE-2024-34068.sarif  CVE-2024-39699.sarif  CVE-2024-39943.sarif  CVE-2024-41813.sarif  CVE-2024-43379.sarif  CVE-2024-45390.sarif  CVE-2024-8003.sarif
results/full_135/: benchmark_report_20260413.json  benchmark_report_20260413.md
results/full_corpus/: benchmark_report_20260413.json  benchmark_report_20260413.md
results/pipeline_test/: benchmark_report_20260413.json  benchmark_report_20260413.md
results/pipeline_v2/: benchmark_report_20260413.json  benchmark_report_20260413.md
scripts/: build_manifest.py  check_claims.py  codeql_batch.py  codeql_gate.py  enrich_corpus_metadata.py  expand_corpus.py  extract_vuln_code.py  gold_evaluation.py  scan_local_project.py  verify_manifest.py
src/blindspotsec/: __init__.py  cli.py
src/scannergap/: __init__.py  cli.py
tests/: test_cli.py  test_falsification.py  test_nvd_client.py  test_quadrant.py  test_report.py  test_scan_local_project.py  test_scanners.py
(+174 files in other folders)
