[project]
name = "scannergap"
version = "0.2.0"
description = "Benchmark-backed SAST blind-spot audit prototype for scoped scanner coverage review"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "ScannerGap Team"}]

dependencies = [
    "click>=8.1",
    "structlog>=24.1",
    "pandas>=2.2",
    "requests>=2.31",
    "pydantic>=2.6",
    "rich>=13.7",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
]
scanners = [
    "semgrep>=1.60",
]

[project.scripts]
scannergap = "scannergap.cli:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=scannergap --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
